--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   kstars-15.04.3.tar.xz: 8f99047d6eb58caada3d957775bfb4b012a8476f
+sources:
+  kstars-15.08.1.tar.xz: 0c6e72b5aeba7b57e84b31f86b11bc75ca3ba8cc
