--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   kstars-2.9.2.tar.xz: 01bbb94cfcc868fa1de007276065cb3f9ea536c1
+sources:
+  kstars-2.9.3.tar.xz: ac65cb6d665737221cdb6b7c14b75809842d4b58
