--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,5 @@
 removed_sources:
   kstars-2.9.2.tar.xz: 01bbb94cfcc868fa1de007276065cb3f9ea536c1
-sources:
   kstars-2.9.3.tar.xz: ac65cb6d665737221cdb6b7c14b75809842d4b58
+sources:
+  kstars-2.9.5.tar.xz: 48801504456b2a6bd225682c40f1a30fd336d155
