--- a/.abf.yml
+++ b/.abf.yml
@@ -1,5 +1,6 @@
 removed_sources:
   kstars-2.9.2.tar.xz: 01bbb94cfcc868fa1de007276065cb3f9ea536c1
   kstars-2.9.3.tar.xz: ac65cb6d665737221cdb6b7c14b75809842d4b58
-sources:
   kstars-2.9.5.tar.xz: 48801504456b2a6bd225682c40f1a30fd336d155
+sources:
+  kstars-2.9.8.tar.xz: 553dd5917bfc3a50db6939e4c1c863f1fe5fb884
